# confee

./: .gitignore  CLAUDE.md
.claude/skill/: create-pull-request.md
.kiro/specs/confee/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/ip-access-control-security/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/tech-conference-agent/: design.md  requirements.md  spec.json
.kiro/steering/: product.md  structure.md  tech.md
agent/: Dockerfile  pyproject.toml
agent/lambda/: handler.py  requirements.txt
agent/lambda/tests/: test_handler.py
agent/src/confee_agent/: agent.py  main.py  mock_events.py  models.py
agent/src/confee_agent/tests/: conftest.py  test_agent.py  test_main.py  test_search_connpass.py
agent/src/confee_agent/tools/: search_connpass.py
docs/: architecture.md  deployment.md  local-development.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: chat.ts
frontend/src/components/: ChatContainer.tsx  ChatInput.tsx  LoadingIndicator.tsx  MessageBubble.tsx  MessageList.tsx  SuggestedPrompts.tsx
frontend/src/data/: suggestedPrompts.ts
frontend/src/test/: setup.ts
infra/: README.md  package-lock.json
infra/frontend/: index.html
infra/lambda/agentcore-custom-resource/: index.py
infra/lambda/health/: index.py
infra/lib/: agentcore-stack.ts  api-stack.ts  frontend-stack.ts
infra/lib/config/: allowed-ips.ts
infra/test/: agentcore-stack.test.ts  allowed-ips.test.ts  api-stack.test.ts  frontend-stack.test.ts
(+2 files in other folders)
